# mirrord

./: Cargo.toml
apps/netpoll-test/: go.mod  main_darwin.go  mirrord.toml
mirrord/agent/src/entrypoint/: setup.rs
mirrord/analytics/src/: lib.rs
mirrord/cli/: Cargo.toml
mirrord/cli/src/: config.rs  error.rs  internal_proxy.rs  main.rs  up.rs
mirrord/intproxy/src/proxies/: outgoing.rs
mirrord/layer/src/: lib.rs  socket.rs
mirrord/layer/src/exec_hooks/: hooks.rs
mirrord/layer/src/socket/: ops.rs
mirrord/up/: Cargo.toml
mirrord/up/src/: config.rs  lib.rs
